# my-hi3861

./: README.md
MyOnenet/: build.gradle
MyOnenet/entry/: build.gradle
MyOnenet/entry/src/main/: config.json
MyOnenet/entry/src/main/java/com/example/onenet/: MainAbility.java  MyApplication.java
MyOnenet/entry/src/main/java/com/example/onenet/slice/: MainAbilitySlice.java
MyOnenet/entry/src/main/resources/base/layout/: ability_main.xml
MyOnenet/entry/src/ohosTest/java/com/example/onenet/: ExampleOhosTest.java
MyOnenet/entry/src/test/java/com/example/onenet/: ExampleTest.java
app/: BUILD.gn
app/demo_wifi_sta/: BUILD.gn  demo_wifi_sta.c
app/iothardware/: BUILD.gn  led_example.c
app/key_demo/: BUILD.gn  key_demo.c
app/led_demo/: BUILD.gn  led_demo.c
app/onenet_test/: BUILD.gn  oled_demo.c  oled_demo.h  oledfont.h  onenet_entry.c  onenet_test.c  onenet_test.h
app/samgr/: BUILD.gn  bootstrap_example.c  broadcast_example.c  feature_example.c  maintenance_example.c  service_example.c  specified_task_example.c  task_example.c
onenet/: BUILD.gn  README.md  onenet.h  onenet_mqtt.c
onenet/samples/: onenet_sample.c
pahomqtt/: BUILD.gn  README.md
pahomqtt/MQTTClient-C/src/liteOS/: MQTTLiteOS.c  MQTTLiteOS.h
