# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("//build/lite/ndk/ndk.gni")

config("onenet_config") {
    include_dirs = [
        ".",
        "//third_party/pahomqtt/MQTTPacket/src",
        "//third_party/pahomqtt/MQTTClient-C/src",
        "//third_party/pahomqtt/MQTTClient-C\src\liteOS",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//vendor/hisi/hi3861/hi3861/third_party/lwip_sack/include",
        "//third_party/cJSON",
    ]
}

onenet_sources = [
    "onenet_mqtt.c",
]

lite_library("onenet_static") {
    target_type = "static_library"
    sources = onenet_sources
    public_configs = [ ":onenet_config" ]
}

lite_library("onenet_shared") {
    target_type = "shared_library"
    sources = onenet_sources
    public_configs = [ ":onenet_config" ]
}

ndk_lib("onenet_ndk") {
    if (board_name != "hi3861v100") {
        lib_extension = ".so"
        deps = [
            ":onenet_shared"
        ]
    } else {
        deps = [
            ":onenet_static"
        ]
    }
    head_files = [
        "//third_party/onenet"
    ]
}
